# jamiecam

./: .clang-format  .gitignore  .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: build-and-dev-setup.md  cutting-simulation.md  development-roadmap.md  gcode-postprocessor.md  geometry-kernel.md  implementation-status.md  machining-modes.md  phase0.md  project-file-format.md  system-architecture.md  technology-stack.md  toolpath-engine.md  viewport-design.md  windows-build-setup.md
scripts/: check-env.ps1  check-env.sh  install-hooks.sh
scripts/tests/: check-env-test.sh  install-hooks-test.sh
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/cpp/: CMakeLists.txt  cam_geometry.cpp  cam_geometry.h  handle_registry.cpp  handle_registry.h  handle_registry_base.h
src-tauri/cpp/tests/: cam_geometry_stub.cpp  run_cam_geometry_tests.sh  run_cpp_tests.sh  test_cam_geometry.cpp  test_geometry.cpp  test_handle_registry.cpp
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: file.rs  mod.rs  operations.rs  project.rs  stock.rs  toolpath.rs  tools.rs
src-tauri/src/geometry/: ffi.rs  importer.rs  mod.rs  safe.rs
src-tauri/src/models/: mod.rs  operation.rs  stock.rs  tool.rs  wcs.rs
src-tauri/src/postprocessor/: arcs.rs  block.rs  config.rs  formatter.rs  mod.rs  modal.rs  program.rs
src-tauri/src/postprocessor/builtins/: fanuc-0i.toml  grbl.toml  linuxcnc.toml  mach4.toml
src-tauri/src/project/: mod.rs  serialization.rs  types.rs
src-tauri/src/toolpath/: mod.rs  types.rs
src-tauri/tests/: gcode_golden.rs
src/api/: errors.ts  file.ts  mock.ts  operations.ts  stock.ts  toolpath.ts  tools.ts  types.ts
src/components/common/: Notifications.test.tsx  Notifications.tsx
src/components/gcode/: GCodePreviewPanel.test.tsx  GCodePreviewPanel.tsx
src/components/layout/: AppShell.tsx
src/components/operations/: OperationListPanel.test.tsx  OperationListPanel.tsx
src/components/toolbar/: Toolbar.test.tsx  Toolbar.tsx
src/store/: projectStore.test.ts  projectStore.ts  viewportStore.test.ts  viewportStore.ts
src/viewport/: Viewport.test.tsx  Viewport.tsx  controls.test.ts  controls.ts  modelMesh.test.ts  modelMesh.ts  scene.test.ts  scene.ts
tests/fixtures/: box.step  box.stl
tests/integration/golden_gcode/fanuc-0i/: simple_pocket.nc  simple_pocket.toolpath.json
tests/integration/golden_gcode/linuxcnc/: simple_pocket.nc
